fix: hero on mobile

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,4 +1,4 @@
-.section:not(.hidden) {
+.section {
     position: relative;
     height: 100dvh;
     max-height: 76vw;
@@ -58,8 +58,6 @@
         height: 50vw;
     }
 }
-
-
 
 @media (max-width: 1023px) {
     .section {
